RESOLVED FIXED256509
canvas freezed when drawing new VideoFrame(video) to canvas
https://bugs.webkit.org/show_bug.cgi?id=256509
Summary canvas freezed when drawing new VideoFrame(video) to canvas
Shawn Lee
Reported 2023-05-08 23:23:47 PDT
Created attachment 466292 [details] screencast Demo : https://w5jlyh.codesandbox.io/ Tested on ios 16.4, iphone 13 Click the start to play the video and notice the first canvas is freezed at first frame. The demo draw the VideoFrame from video to first canvas then draw first canvas to second canvas. The first canvas is freezed but the second canvas is not.
Attachments
screencast (8.09 MB, video/mp4)
2023-05-08 23:23 PDT, Shawn Lee
no flags
Radar WebKit Bug Importer
Comment 1 2023-05-09 09:08:53 PDT
Eric Carlson
Comment 2 2023-05-10 06:20:28 PDT
Also reproduces is on macOS where the first canvas does update when the mouse lives over it, so we may just not be invalidating a canvas when a VideoFrame is drawn to it. Thanks for the report and clear test case!
youenn fablet
Comment 3 2023-05-10 06:41:59 PDT
EWS
Comment 4 2023-05-11 05:26:26 PDT
Committed 263959@main (0a48a1c5428e): <https://commits.webkit.org/263959@main> Reviewed commits have been landed. Closing PR #13691 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.