canvas freezed when drawing new VideoFrame(video) to canvas https://bugs.webkit.org/show_bug.cgi?id=256509 rdar://109100283

Reviewed by Eric Carlson.

We need to invalidate the canvas after drawing the VideoFrame.
Covered by added ref test.

* LayoutTests/http/wpt/webcodecs/canvas-drawVideoFrame-expected.html: Added.
* LayoutTests/http/wpt/webcodecs/canvas-drawVideoFrame.html: Added.
* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::drawImage):

Canonical link: https://commits.webkit.org/263959@main